# PRISM

./: .gitignore  .pre-commit-config.yaml  AI_ASSISTANT_GUIDE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  main.py  main_mopie.py  pyproject.toml
.claude/: config.json  settings.json
.claude/commands/: add-enhancement.md  analyze-checkpoint.md  compare-algorithms.md  create-knowledge-graph.md  finalize-plan.md  implement-parallel-group.md  implement-task.md  refactor-status.md  update-knowledge-graph.md
.claude/hooks/: format_python_hook.sh  validate_python_hook.sh
.claude/skills/: README.md
.cursor/: settings.json
.github/workflows/: ci.yml  docs.yml  knowledge-graph.yml
.memory/: .last_update  README.md  memory.jsonl  test_queries.py  update_knowledge_graph.py
configs/: README.md  default.yaml  mopie_example.yaml  point_source_test.yaml  production_europa.yaml  quick_test.yaml
configs/presets/: debug.yaml  europa_custom.yaml  high_quality.yaml  mopie_baseline.yaml  production.yaml  quick_test.yaml
docs/: CODE_REVIEW_REPORT.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.md  otf_frequency_calibration_fix.md  profiling.md  user_guide.md
docs/api/: FOUR_F_DOCUMENTATION_INDEX.md  Makefile  README.md  __main__.md  algorithms.md  analysis.md  angular_spectrum.md  animate.md  animation.md  aperture_masks.md  apertures.md  base.md  caching.md  callbacks.md  camera.md  checkpointing.md  cli.md  commands.md  compare.md  comparison.md  conf.py  config.md  constants.md  convergence.md  core.md  dashboard.md  detector_noise.md  epie.md  four_f_base.md  four_f_forward.md  fraunhofer.md  fresnel.md  gallery.md  generator.md  grid.md  html_reporter.md  image.md  incoherent.md  index.md  index.rst  (+60 more)
docs/architecture/: codebase_exploration.md  forward-model-physics.md  instrument-hierarchy.md  propagator-usage.md  runner-trainer-architecture.md
docs/examples/: 01_basic_reconstruction.py  02_config_based_training.py  03_custom_sampling.py  04_visualization.py  README.md  coherence_modes.md
docs/models/: progressive_decoder.md
docs/performance/: baseline-metrics-rtx4050.md  baseline-v0.2.0.md  benchmarking_guide.md  phase1_week3_performance_report.md  phase5-benchmark-results.md
docs/references/: README.md  drone_camera_parameters.md  fresnel_propagation_regimes.md  microscopy_parameters.md  optical_resolution_limits.md  physical_constants.md  scanning_modes.md  scenario_preset_catalog.md
docs/user_guides/: learning_path.md  optical-engineering.md  pattern-functions.md  propagator_selection.md  scenarios.md  synthetic-aperture-initialization.md  training-paradigm.md
docs/validation/: baseline_results.md
examples/: demo_optical_simulation.py  run_profiled_reconstruction.sh  run_reconstruction.sh
examples/baselines/: README.md  mopie_baseline.py
examples/notebooks/: README.md  camera_simulation.ipynb  learning_01_resolution_fundamentals.ipynb  learning_02_resolution_validation.ipynb  learning_03_illumination_modes.ipynb  learning_04_gsd_basics.ipynb  learning_05_drone_altitudes.ipynb  learning_08_scenario_comparison.ipynb  microscope_simulation.ipynb  quickstart_01_microscopy_basic.ipynb  quickstart_02_drone_basic.ipynb  quickstart_03_validation_intro.ipynb  scanning_illumination_demo.ipynb  spids_microscopy_resolution_enhancement.ipynb  tutorial_01_quickstart.ipynb  tutorial_02_pattern_design.ipynb  tutorial_03_result_analysis.ipynb  tutorial_04_dashboard.ipynb  tutorial_05_reporting.ipynb
examples/paper_figures/: README.md  generate_figures.py  required_data.txt
examples/patterns/: concentric_circles.py  continuous_spiral.py  jittered_grid.py  logarithmic_spiral.py
examples/python_api/: 01_basic_usage.py  02_custom_patterns.py  03_custom_loss.py  04_model_extension.py  05_batch_experiments.py  06_microscope_reconstruction.py  07_drone_mapping.py  08_custom_scenario_builder.py  09_resolution_validation.py  README.md  run_all_examples.sh
prism/: __init__.py  types.py
prism/analysis/: __init__.py  comparison.py
prism/cli/: __init__.py  animate.py  compare.py  dashboard.py  entry_points.py  parser.py  profile.py  report.py
prism/config/: __init__.py  ai_config.py  base.py  constants.py  inspector.py  interactive.py  loader.py  natural_language.py  objects.py  presets.py  validation.py
prism/core/: __init__.py  apertures.py  convergence.py  grid.py  illumination.py  line_acquisition.py  measurement_system.py  pattern_builtins.py  pattern_library.py  pattern_loader.py  pattern_preview.py  patterns.py  runner.py  targets.py  trainers.py
prism/models/: __init__.py  layers.py  losses.py  network_builder.py  network_config.py  networks.py  noise.py
prism/profiling/: __init__.py  analyzer.py  call_graph.py  callbacks.py  collector.py  config.py  cuda_timer.py  memory.py  storage.py  torch_integration.py
prism/reporting/: __init__.py  generator.py
prism/scenarios/: __init__.py  base.py  drone_camera.py  microscopy.py  presets.py
prism/utils/: __init__.py  image.py  io.py  logging_config.py  measurement_cache.py  metrics.py  progress.py  sampling.py  training_helpers.py  transforms.py  validation_metrics.py
prism/validation/: __init__.py  baselines.py
prism/visualization/: __init__.py  animation.py  base.py  config.py  helpers.py  legacy.py  protocols.py
prism/web/: __init__.py  dashboard.py  launcher.py  server.py
tests/: GPU_TESTING.md  KNOWN_ISSUES.md  __init__.py  conftest.py  test_validation_baselines.py  test_validation_metrics.py
tests/benchmarks/: __init__.py  test_line_acquisition_perf.py  test_performance.py
tests/e2e/: __init__.py  conftest.py  test_cli_tools.py  test_examples_demo.py  test_examples_patterns.py  test_examples_python_api.py  test_main_mopie.py  test_main_prism.py  test_notebooks.py
tests/integration/: __init__.py  test_ai_config_integration.py  test_amp_mixed_precision.py  test_aperture_illumination_equivalence.py  test_cli_flags.py  test_coherence_modes_integration.py  test_composite_noise_models.py  test_custom_network_configs.py  test_dashboard_integration.py  test_inference_optimization.py  (+16 more)
(+202 files in other folders)
